--- a/style.css
+++ b/style.css
@@ -1,4 +1,27 @@
 body {
-    background: black;
-    font-family: 'Segoe UI';
+    background-color: black;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+#login {
+    color: white;
+    background-color: black;
+    border-color: purple;
+}
+#signup {
+    color: white;
+    background-color: black;
+    border-color: purple;
+}
+.login {
+    background-color: black;
+    color: white;
+    border-color: purple;
+}
+.signup {
+    background-color: black;
+    color: white;
+    border-color: purple;
+}
+form {
+    border-color: purple;
 }
